# vpn

wg_service/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
wg_service/alembic/: env.py
wg_service/alembic/versions/: 1bfc90889568_allowed_ips_unique.py  603ec875b0b7_peer_model.py  c5049efef47d_allowed_ips_as_cidr.py  e27326e27605_wgo_key_model.py  e35cd4ae11b0_allowed_ips_as_inet.py
wg_service/tests/deleted/: repositories.py  routes.py  service.py
wg_service/wg_service/: __init__.py  dependencies.py  session.py  settings.py
wg_service/wg_service/api/v1/: __init__.py  peer.py
wg_service/wg_service/models/: base.py  peer.py  wg0_key.py
wg_service/wg_service/repositories/: abstract.py  peer.py  wg0_key.py
wg_service/wg_service/schemas/: keys.py  peer.py
wg_service/wg_service/services/: peer_service.py  wg0_service.py  wg_service.py
wg_service/wg_service/unit_of_work/: abstract.py  unit_of_work.py
wg_wrapper/: README.md  pyproject.toml
wg_wrapper/tests/: test_command.py  test_configuration.py
wg_wrapper/wg_wrapper/: command.py  config.py  consts.py  schemas.py  wrapper.py
