[tool.poetry]
name = "wg_wrapper"
version = "0.1.0"
description = ""
authors = ["avarfolomeev <avarfolomeev@sfxdx.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
